# PYNQ_HDMI

./: README.md
docs/: Model.txt  NN_ip.txt  mobileNetV2_Precision_per_Layer.ipynb
docs/images/: PLACEZ_ICI.txt
hardware/: README.md
hardware/vivado_sources/: base.xdc  cam_hdmi.xpr
hardware/vivado_sources/cam_hdmi.cache/wt/: synthesis.wdf  webtalk_pa.xml
hardware/vivado_sources/cam_hdmi.runs/.jobs/: vrs_config_1.xml  vrs_config_2.xml  vrs_config_4.xml  vrs_config_6.xml  vrs_config_7.xml
hardware/vivado_sources/cam_hdmi.runs/impl_1/: .init_design.begin.rst  .vivado.begin.rst  clockInfo.txt  design_1_wrapper.tcl  design_1_wrapper.vdi  design_1_wrapper_bus_skew_routed.rpt  design_1_wrapper_bus_skew_routed.rpx  design_1_wrapper_clock_utilization_routed.rpt  design_1_wrapper_control_sets_placed.rpt  design_1_wrapper_drc_opted.pb  design_1_wrapper_drc_opted.rpt  design_1_wrapper_drc_opted.rpx  design_1_wrapper_drc_routed.pb  design_1_wrapper_drc_routed.rpt  design_1_wrapper_drc_routed.rpx  design_1_wrapper_io_placed.rpt  design_1_wrapper_methodology_drc_routed.rpt  design_1_wrapper_methodology_drc_routed.rpx  design_1_wrapper_power_routed.rpt  design_1_wrapper_power_summary_routed.pb  gen_run.xml  project.wdf  (+16 more)
hardware/vivado_sources/cam_hdmi.runs/synth_1/prj/sol/impl/misc/drivers/design_1_v_tpg_0_0_v_tpg_v8_2/src/: CMakeLists.txt  xdesign_1_v_tpg_0_0_v_tpg_hw.h
notebooks/: camera_MobileNetV2.ipynb  camera_hdmi.ipynb
notebooks/Notebook/: camera_hdmi_base.ipynb  design_1.bit
src/: live_camera_hdmi.py  measure_offset.py  test_camera_capture.py  test_colorbar.py
(+617 files in other folders)
